Fix formatting of Nominations page on mobile

--- a/src/pages/NominationsPage/NominationsPage.scss
+++ b/src/pages/NominationsPage/NominationsPage.scss
@@ -3,7 +3,8 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  height: 100vh;
+  min-height: 100vh;
+  padding: 3em 0;
 }
 
 .shared-nominations__container {
